--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 </head>
 <body>
 
-	Hello World
+	<div>
+		<img src="78-785827_user-profile-avatar-login-account-male-user-icon.png" alt="profile image" />
+		<h2>Sincan Maulana</h2>
+	 </div>
 
 </body>
 </html>
