Added ids for each profile element.

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 </head>
 <body>
 
-	<div>
-		<img src="78-785827_user-profile-avatar-login-account-male-user-icon.png" alt="profile image" />
-		<h2>Sincan Maulana</h2>
+	<div id="profile-container">
+		<img id="profile-image" src="78-785827_user-profile-avatar-login-account-male-user-icon.png" alt="profile image" />
+		<h2 id="profile-name">Sincan Maulana</h2>
 	 </div>
 
 </body>
