--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <div id="header">Header</div>
 	<div id="profile-container">
 		<img id="profile-image" src="78-785827_user-profile-avatar-login-account-male-user-icon.png" alt="profile image" />
 		<h2 id="profile-name">Sincan Maulana</h2>
