--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<img id="profile-image" src="78-785827_user-profile-avatar-login-account-male-user-icon.png" alt="profile image" />
 		<h2 id="profile-name">Sincan Maulana</h2>
 	 </div>
+	     <div id="footer">Footer</div>
 
 </body>
 </html>
